fixing budget box on mobile

--- a/wp-content/themes/hoverboard-v2/src/scss/partials/_contact-popup.scss
+++ b/wp-content/themes/hoverboard-v2/src/scss/partials/_contact-popup.scss
@@ -20,6 +20,7 @@
     height: 100%;
     overflow: hidden;
     transition: max-height .3s;
+    z-index: 100;
     &.active {
       max-height: 3999px;
     }
